--- a/css/style.css
+++ b/css/style.css
@@ -65,10 +65,94 @@ nav{
     align-content: center;
     justify-content: center;
 }
+.med::-webkit-scrollbar {
+    width: 3px;
+}
+ 
+.med::-webkit-scrollbar-track {
+    -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.3);
+}
+ 
+.med::-webkit-scrollbar-thumb {
+  background-color: black;
+  outline: 1px solid black;
+}
+.media:hover{
+    background: #f5f5f5;    
+}
 .footer a, .footer p{
     color: #9b9b9b;
     text-decoration: none;
     font-family: Source Sans Pro;
     font-size: 14px;
     letter-spacing: 0.4px;
+}
+header{
+    font-family: "Open Sans";
+  font-size: 12px;
+  letter-spacing: 0.5px;
+  color: #526173;
+}
+.navbar a{
+    font-family: Source Sans Pro;
+  font-size: 14px;
+  letter-spacing: 0.6px;
+  color: #526173 !important;
+}
+.p-md{
+    font-family: Georgia;
+  font-size: 17px;
+  letter-spacing: 1px;
+}
+.p-p6{
+  font-family: Source Sans Pro;
+  font-size: 14px;
+  letter-spacing: 0.6px;
+}
+.p-p{
+  font-family: Source Sans Pro;
+  font-size: 14px;
+  font-weight: bold;
+  letter-spacing: 4.9px;
+}
+.p-h1{
+  font-family: Georgia;
+  font-size: 52px;
+  letter-spacing: 3.1px;
+}
+.p-h3{
+  font-family: Georgia;
+  font-size: 36px;
+  letter-spacing: 2.1px;
+}
+.p-sm{
+  font-family: "Open Sans";
+  font-size: 14px;
+  font-weight: 600;
+  letter-spacing: 0.8px;
+}
+.p-lo{
+    font-family: Georgia;
+  font-size: 24px;
+  letter-spacing: 1.4px;
+}
+.p-g24{
+    font-family: Georgia;
+  font-size: 24px;
+  letter-spacing: 1.4px;
+}
+@media only screen and (max-width: 576px){
+    .p-h1{
+        font-family: Georgia;
+        font-size: 36px;
+        letter-spacing: 1.6px;
+    }
+    .p-h3{
+        font-size: 26px;
+        letter-spacing: 0.8px;
+    }
+    .p-lo{
+        font-size: 18px;
+        letter-spacing: 0.7px;
+    }
 }
